# tokenmeter

./: .cursorrules  .gitignore  .windsurfrules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
TokenMeter/: Package.swift
TokenMeter/TokenMeter/: TokenMeterApp.swift  UsageViewModel.swift
TokenMeter/TokenMeter.xcodeproj/: project.pbxproj
TokenMeter/TokenMeter/Models/: UsageSummary.swift
TokenMeter/TokenMeter/Resources/: AppIcon.icns
TokenMeter/TokenMeter/Services/: ContextWindowParser.swift  NativeUsageParser.swift  UpdateChecker.swift  UsageAPIService.swift  UsageService.swift
TokenMeter/TokenMeter/Views/: CostSummaryView.swift  DailyChartView.swift  DashboardView.swift  ModelBreakdownView.swift  RateLimitView.swift  SettingsView.swift  UsageHeatmapView.swift
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  context_window.rs  lib.rs  scheduler.rs  state.rs  tray.rs
src-tauri/src/providers/: ccusage.rs  mod.rs  types.rs
website/: next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/components/: AppMockup.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Installation.tsx
